--- a/EyeBot/Podfile
+++ b/EyeBot/Podfile
@@ -4,6 +4,8 @@ platform :ios, '10.0'
 target 'EyeBot' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
+  # ignore all warnings from all pods
+  inhibit_all_warnings!  
 
   # Pods for EyeBot
   pod 'Alamofire', '~> 4.4'  
